// Copyright 2013-2016 Jason Leyba
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "webutil/html/types/proto/html.proto";

option java_package = "com.github.jsdossier.proto";
option java_multiple_files = true;

package dossier.expression;


message FunctionType {
  bool is_constructor = 1;
  TypeExpression instance_type = 2;
  repeated TypeExpression parameter = 3;
  TypeExpression return_type = 4;
}


message TypeLink {
  reserved 1;

  string json = 2;
  webutil.html.types.SafeUrlProto href = 3;
}


// Defines a link to a named type. The link's href will be empty if the type
// could not be resolved.
message NamedType {
  // The type's simple name.
  string name = 1;

  // The type's qualified name. If omitted, the |qualified_name| is considered the same as
  // the simple |name|.
  string qualified_name = 2;

  oneof location {
    TypeLink link = 3;
    bool extern = 4;
  }
  repeated TypeExpression template_type = 5;
}


message UnionType {
  repeated TypeExpression type = 1;
}


message RecordType {
  message Entry {
    string key = 1;
    TypeExpression value = 2;
  }

  repeated Entry entry = 1;
}


message TypeExpression {
  oneof modifier {
    bool is_optional = 1;
    bool is_varargs = 2;
  }

  oneof node_type {
    FunctionType function_type = 3;
    NamedType named_type = 4;
    RecordType record_type = 5;
    UnionType union_type = 6;

    bool any_type = 7;
    bool unknown_type = 8;
    bool void_type = 9;
    bool null_type = 10;
  }
}
